--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-redux": "^6.0.1",
+    "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-firebase": "^0.3.3",
+    "redux-firestore": "^0.7.2",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
