--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "movie-review",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.7.0",
-    "@material-ui/icons": "^4.5.1",
-    "firebase": "^7.5.0",
-    "font-awesome": "^4.7.0",
-    "moment": "^2.24.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-redux-firebase": "^3.0.5",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-firebase": "^0.3.3",
-    "redux-firestore": "^0.10.0",
-    "redux-thunk": "^2.3.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "movie-review",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@material-ui/core": "^4.7.0",
+		"@material-ui/icons": "^4.5.1",
+		"firebase": "^7.5.0",
+		"font-awesome": "^4.7.0",
+		"moment": "^2.24.0",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-redux": "^5.1.1",
+		"react-redux-firebase": "^2.2.6",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "^3.2.0",
+		"redux": "^4.0.4",
+		"redux-firebase": "^0.3.3",
+		"redux-firestore": "^0.10.0",
+		"redux-thunk": "^2.3.0"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
