--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@material-ui/core": "^4.7.0",
-		"@material-ui/icons": "^4.5.1",
+		"@material-ui/core": "^4.8.3",
 		"axios": "^0.19.0",
 		"firebase": "^7.5.0",
 		"font-awesome": "^4.7.0",
+		"materialize-css": "^1.0.0-rc.2",
 		"moment": "^2.24.0",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
