--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@material-ui/core": "^4.8.3",
-		"axios": "^0.19.0",
-		"firebase": "^7.5.0",
+		"@material-ui/core": "^4.11.0",
+		"axios": "^0.19.2",
+		"firebase": "^7.18.0",
 		"font-awesome": "^4.7.0",
-		"materialize-css": "^1.0.0-rc.2",
-		"moment": "^2.24.0",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"react-redux": "^5.1.1",
-		"react-redux-firebase": "^2.2.6",
-		"react-router-dom": "^5.1.2",
-		"react-scripts": "^3.3.0",
-		"redux": "^4.0.4",
+		"materialize-css": "^1.0.0",
+		"moment": "^2.27.0",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-redux": "^5.1.2",
+		"react-redux-firebase": "^2.5.1",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "^3.4.3",
+		"redux": "^4.0.5",
 		"redux-firebase": "^0.3.3",
 		"redux-firestore": "^0.10.0",
 		"redux-thunk": "^2.3.0",
