--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"font-awesome": "^4.7.0",
 		"materialize-css": "^1.0.0",
 		"moment": "^2.27.0",
+		"node-sass": "^4.14.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^5.1.2",
